<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.infnet.widgets.myapplication.OptionsFormActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="38dp"
        android:text="@string/pergunta1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/options_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Android"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Java"
        android:layout_below="@+id/checkBox"
        android:layout_alignStart="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="iOS"
        android:layout_below="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox2" />
    
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:orientation="horizontal"
        android:layout_alignLeft="@id/textView6"
        android:layout_marginTop="16dp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="iOS" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Android"
            android:layout_below="@+id/textView6"
            android:layout_toEndOf="@+id/checkBox" />

    </RadioGroup>



    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="131dp"
        android:text="@string/pergunta2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <Spinner
        android:id="@+id/spinner_blocos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/radioGroup"
        android:layout_alignEnd="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pergunta3"
        android:layout_marginTop="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@+id/radioGroup"
        android:layout_alignEnd="@+id/textView6" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/spinner_blocos"
        android:layout_below="@+id/spinner_blocos"
        android:layout_marginTop="10dp"
        android:text="@string/btn_salvar" />


</RelativeLayout>
